# pyreq

./: .gitignore  Cargo.toml  LICENSE-BSD  README.md
conformance/: README.md  _common.py  differential.py  property.py  vectors.py
conformance/harness/: Cargo.toml
conformance/harness/src/: main.rs
src/: lib.rs  markers.rs  requirements.rs  specifiers.rs  tags.rs  tokenizer.rs  utils.rs
