[package]
name = "pyreq"
version = "0.1.0"
edition = "2024"
description = "A Rust port of Python packaging: PEP 440 versions and PEP 508 specifiers, markers, and requirements."
license = "BSD-2-Clause"
repository = "https://github.com/VoiceLessQ/pyreq"
readme = "README.md"
keywords = ["pep440", "pep508", "version", "packaging", "python"]
categories = ["parser-implementations"]

[dependencies]
regex = "1.12.4"
